# UAGF_TAM_AAA

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROMPT.md  README.md  SETUP.md  UPDATE.md  USER_MANUAL.md  aaa_mock_data_testing.ipynb  alembic.ini  constraints.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-optional-redteam.txt  requirements.txt  tasks.md
.github/workflows/: ci.yml  s4_contract.yml  streamlit_deploy.yml  templates_release.yml
aaa/: cli.py  settings.py
aaa/agents/: base.py  doc_intelligence.py  intake_validator.py
aaa/api/: main.py  schemas.py  store.py
aaa/dagster/: __init__.py  definitions.py  jobs.py  resources.py  sensors.py
aaa/observability/: __init__.py  error_handler.py  llm_audit.py  logging_config.py  metrics.py
aaa/platform/: artifact_loader.py  env_bootstrap.py  evidence.py  flex_retry.py  model_registry.py  prompt_registry.py  state.py  token_guard.py
aaa/tools/: annex_iii_classify.py  annex_iv_validator.py  cgsa_pull.py  (+36 more)
alembic/: env.py
data/: Updated_Expose_S5_UAGF_TAM_AAA_Updated.txt
infra/: runbook.md
notebooks/: mock_data_test_suite.ipynb
scripts/: demo_data_store.py  ingest_regulatory_corpus.py  setup.py  smoke_group11.py  smoke_group6.py  smoke_group7.py  smoke_group8.py  smoke_group9.py
templates/: T01a_stage_a_triage.json  T01b_annex_iv_dossier.json  T04_risk_tier_decision.json  T05_art43_decision.json  T06_datasheet_for_datasets.json  T07_data_quality_report.json  T13_output_sampling_log.json  T14_governance_findings.json  T18_audit_report.json
(+144 files in other folders)
